Fix a whitespace bug

--- a/packages/ui/src/JoinButton/Link/index.module.scss
+++ b/packages/ui/src/JoinButton/Link/index.module.scss
@@ -5,6 +5,7 @@
   font-weight: 500;
   padding: 0.375rem 1.5rem;
   transition: background 0.2s ease, color 0.2s ease, border 0.2s ease;
+  white-space: nowrap;
   z-index: 1;
 }
 
